# gixsql

./: configure.ac
gixpp/: Makefile.am
libgixpp/: GixEsqlLexer.cpp  Makefile.am
runtime/libgixsql/: Makefile.am  SqlVar.cpp  utils.cpp
runtime/libgixsql-mysql/: utils.cpp
runtime/libgixsql-odbc/: Makefile.am
runtime/libgixsql-oracle/: Makefile.am  utils.cpp
runtime/libgixsql-pgsql/: Makefile.am  utils.cpp
runtime/libgixsql-sqlite/: Makefile.am  utils.cpp
